; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/dxdiagn/extr_container.c_test_GetNumberOfProps.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/dxdiagn/extr_container.c_test_GetNumberOfProps.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [44 x i8] c"Unable to create the root IDxDiagContainer\0A\00", align 1
@pddc = common dso_local global i32 0, align 4
@E_INVALIDARG = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [80 x i8] c"Expected IDxDiagContainer::GetNumberOfProps to return E_INVALIDARG, got 0x%08x\0A\00", align 1
@S_OK = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [72 x i8] c"Expected IDxDiagContainer::GetNumberOfProps to return S_OK, got 0x%08x\0A\00", align 1
@.str.3 = private unnamed_addr constant [69 x i8] c"Expected the number of properties for the root container to be zero\0A\00", align 1
@pddp = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_GetNumberOfProps to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_GetNumberOfProps() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i64, align 8
  %3 = call i32 (...) @create_root_IDxDiagContainer()
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %7, label %5

5:                                                ; preds = %0
  %6 = call i32 @skip(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0))
  br label %37

7:                                                ; preds = %0
  %8 = load i32, i32* @pddc, align 4
  %9 = call i64 @IDxDiagContainer_GetNumberOfProps(i32 %8, i64* null)
  store i64 %9, i64* %1, align 8
  %10 = load i64, i64* %1, align 8
  %11 = load i64, i64* @E_INVALIDARG, align 8
  %12 = icmp eq i64 %10, %11
  %13 = zext i1 %12 to i32
  %14 = load i64, i64* %1, align 8
  %15 = call i32 (i32, i8*, ...) @ok(i32 %13, i8* getelementptr inbounds ([80 x i8], [80 x i8]* @.str.1, i64 0, i64 0), i64 %14)
  %16 = load i32, i32* @pddc, align 4
  %17 = call i64 @IDxDiagContainer_GetNumberOfProps(i32 %16, i64* %2)
  store i64 %17, i64* %1, align 8
  %18 = load i64, i64* %1, align 8
  %19 = load i64, i64* @S_OK, align 8
  %20 = icmp eq i64 %18, %19
  %21 = zext i1 %20 to i32
  %22 = load i64, i64* %1, align 8
  %23 = call i32 (i32, i8*, ...) @ok(i32 %21, i8* getelementptr inbounds ([72 x i8], [72 x i8]* @.str.2, i64 0, i64 0), i64 %22)
  %24 = load i64, i64* %1, align 8
  %25 = load i64, i64* @S_OK, align 8
  %26 = icmp eq i64 %24, %25
  br i1 %26, label %27, label %32

27:                                               ; preds = %7
  %28 = load i64, i64* %2, align 8
  %29 = icmp eq i64 %28, 0
  %30 = zext i1 %29 to i32
  %31 = call i32 (i32, i8*, ...) @ok(i32 %30, i8* getelementptr inbounds ([69 x i8], [69 x i8]* @.str.3, i64 0, i64 0))
  br label %32

32:                                               ; preds = %27, %7
  %33 = load i32, i32* @pddc, align 4
  %34 = call i32 @IDxDiagContainer_Release(i32 %33)
  %35 = load i32, i32* @pddp, align 4
  %36 = call i32 @IDxDiagProvider_Release(i32 %35)
  br label %37

37:                                               ; preds = %32, %5
  ret void
}

declare dso_local i32 @create_root_IDxDiagContainer(...) #1

declare dso_local i32 @skip(i8*) #1

declare dso_local i64 @IDxDiagContainer_GetNumberOfProps(i32, i64*) #1

declare dso_local i32 @ok(i32, i8*, ...) #1

declare dso_local i32 @IDxDiagContainer_Release(i32) #1

declare dso_local i32 @IDxDiagProvider_Release(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
